--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <body>
         <div class="container-ct">
             <div class="main">
+                <!-- Hero -->
                 <section class="section">
-                    <!-- Hero -->
                     <article>
                         <div class="hero block">
                             <div class="hero__video">
@@ -383,6 +383,7 @@
                     </article>
                 </section>
 
+                <!-- compliance -->
                 <section class="section">
                     <article class="compliance block">
                         <div class="compliance__left">
@@ -455,7 +456,7 @@
 
                             <div class="panel__content-right">
                                 <figure class="panel__content-image">
-                                    <img src="./assets/images/panel.png" alt="Panel" />
+                                    <img src="./assets/images/news/panel.png" alt="Panel" />
                                 </figure>
                             </div>
                         </div>
@@ -474,10 +475,10 @@
 
                         <div class="styles__content block">
                             <div class="styles__content-image">
-                                <img src="./assets/images/styles-1.png" alt="Styles" />
+                                <img src="./assets/images/news/styles-1.png" alt="Styles" />
                             </div>
                             <div class="styles__content-image">
-                                <img src="./assets/images/styles-2.png" alt="Styles" />
+                                <img src="./assets/images/news/styles-2.png" alt="Styles" />
                             </div>
                             <div class="styles__content-arrow">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="25" viewBox="0 0 130 25" fill="none">
@@ -493,72 +494,111 @@
                     </article>
                 </section>
 
+                <!-- Rules -->
                 <section class="section">
-                    <article class="product">
-                        <p data-animate="fade-from-left" class="subtitle">Начнём с главного</p>
-                        <div class="product__head section__head">
-                            <h2 data-animate="fade-up" class="heading lv2">Карточка товара, которая&nbsp;<strong class="text-blue">продаёт</strong></h2>
-                            <p data-animate="fade-up" data-delay="200" class="text-main">Откройте для себя непревзойдённые возможности продающей&nbsp;карточки товара.</p>
+                    <article class="rules">
+                        <p data-animate="fade-from-left" class="subtitle">Полный контроль</p>
+                        <div class="rules__head section__head">
+                            <h2 data-animate="fade-up" class="heading lv2">Главная страница&nbsp;– <strong class="text-orange">ваши&nbsp;правила</strong></h2>
+                            <p data-animate="fade-up" data-delay="200" class="text-main">
+                                Создайте эффективную и удобную главную страницу, которая будет не просто красиво выглядеть, а работать на продажи.
+                            </p>
                         </div>
-                        <div class="section__preview">
-                            <div class="section__preview-image">
+                        <div class="rules__content">
+                            <div class="rules__features">
+                                <div class="rules__feature">
+                                    <div class="rules__feature-title text-title" data-animate="fade-up" data-delay="100">Управляйте порядком блоков</div>
+                                    <div class="text-main" data-animate="fade-up" data-delay="150">Расставляйте акценты так, как удобно вам и вашим клиентам</div>
+                                </div>
+                                <div class="rules__feature">
+                                    <div class="rules__feature-title text-title" data-animate="fade-up" data-delay="100">Адаптируйте дизайн</div>
+                                    <div class="text-main" data-animate="fade-up" data-delay="150">Меняйте внешний вид под стиль вашего бизнеса</div>
+                                </div>
+                                <div class="rules__feature">
+                                    <div class="rules__feature-title text-title" data-animate="fade-up" data-delay="100">Легко настраивайте</div>
+                                    <div class="text-main" data-animate="fade-up" data-delay="150">От баннеров до товарных блоков</div>
+                                </div>
+                            </div>
+                            <div class="rules__image block">
+                                <img src="./assets/images/news/rules.png" alt="Rules" />
+                            </div>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Sale -->
+                <section class="section">
+                    <article class="sale">
+                        <p data-animate="fade-from-left" class="subtitle">Простота – это сила</p>
+                        <div class="sale__head section__head">
+                            <h2 data-animate="fade-up" class="heading lv2">Каталог, который <strong class="text-orange">ведёт&nbsp;к&nbsp;покупке</strong></h2>
+                            <p data-animate="fade-up" data-delay="200" class="text-main">
+                                Без перегруженного интерфейса и лишних кликов, только&nbsp;то,&nbsp;что&nbsp;действительно важно для покупателей.
+                            </p>
+                        </div>
+                        <div class="sale__content block">
+                            <p class="sale__content-title text-title" data-animate="fade-up" data-delay="100">Умный фильтр</p>
+                            <p class="sale__content-text text-main" data-animate="fade-up" data-delay="150">
+                                с поиском по характеристикам, подсказками и разными вариантами отображения, который помогает покупателям быстрее находить товары
+                            </p>
+                            <div class="sale__content-images">
+                                <div class="sale__content-image">
+                                    <img src="./assets/images/news/sale-1.png" alt="Sale" />
+                                </div>
+                                <div class="sale__content-image">
+                                    <img src="./assets/images/news/sale-2.png" alt="Sale" />
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </section>
+
+                <!-- Card -->
+                <section class="section">
+                    <article class="card">
+                        <p data-animate="fade-from-left" class="subtitle">Простота – это сила</p>
+                        <div class="card__head section__head">
+                            <h2 data-animate="fade-up" class="heading lv2">Карточка товара, <strong class="text-orange">котораяпродаёт</strong></h2>
+                            <div data-animate="fade-up" data-delay="200" class="text-main">
+                                <p>Не просто страница, а инструмент продаж, который превращает просмотр в покупку.</p>
+                            </div>
+                        </div>
+                        <div class="card__content block">
+                            <div class="card__content-image">
                                 <figure>
-                                    <img src="./assets/images/product.png" alt="Карточка товара" />
+                                    <img data-src="./assets/images/news/card.png" alt="" />
                                 </figure>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-1">
-                                    <p class="note-desktop-text right">Привязывайте товары к акциям, чтобы&nbsp;о них узнали покупатели.</p>
+                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-16">
+                                    <p class="note-desktop-text right">Объясняйте из чего состоит комплект и какие товары обычно покупают с этим комплектом.</p>
                                 </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-2">
-                                    <p class="note-desktop-text right">Создавайте любые лейблы и&nbsp;выделяйте ими товары.</p>
+                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-17">
+                                    <p class="note-desktop-text left">Выделяйте товарные группы.</p>
                                 </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-3">
-                                    <p class="note-desktop-text left">Сообщайте о доступности.</p>
-                                </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-4">
-                                    <p class="note-desktop-text left">Предлагайте ограниченные временем или&nbsp;условиями «умные» скидки.</p>
-                                </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-5">
-                                    <p class="note-desktop-text left">Используйте торговые предложения для&nbsp;вариативных товаров.</p>
-                                </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-6">
+                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-18">
                                     <p class="note-desktop-text left">Оформляйте заказы за клиентов с&nbsp;функцией «Купить&nbsp;в&nbsp;1&nbsp;клик».</p>
                                 </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-7">
-                                    <p class="note-desktop-text left">Упростите поиск нужного товара, когда ассортимент бренда обширен.</p>
-                                </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-8">
-                                    <p class="note-desktop-text left">Выводите важные характеристики на&nbsp;первый экран просмотра.</p>
-                                </div>
-                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-8-5">
-                                    <p class="note-desktop-text right">Добавляйте видеообзоры и&nbsp;повышайте тем&nbsp;самым конверсию.</p>
+                                <div data-animate="zoom-out" data-delay="300" class="note-desktop note-blue note-19">
+                                    <p class="note-desktop-text right">Давайте возможность заменить товар&nbsp;на&nbsp;другой.</p>
                                 </div>
                             </div>
                         </div>
                         <ul class="notes-mobile">
                             <li data-animate="fade-up" class="notes-mobile-item">
-                                <p class="text-main">Привязывайте товары к&nbsp;акциям, чтобы&nbsp;о&nbsp;них&nbsp;узнали&nbsp;покупатели.</p>
+                                <p class="text-main">Объясняйте из чего состоит комплект и&nbsp;какие&nbsp;товары обычно покупают с этим комплектом.</p>
                             </li>
-                            <li data-animate="fade-up" data-delay="50" class="notes-mobile-item">
-                                <p class="text-main">Создавайте любые лейблы и&nbsp;выделяйте&nbsp;ими&nbsp;товары.</p>
+                            <li data-animate="fade-up" data-delay="`50" class="notes-mobile-item">
+                                <p class="text-main">Давайте возможность заменить товар&nbsp;на&nbsp;другой.</p>
                             </li>
                             <li data-animate="fade-up" data-delay="100" class="notes-mobile-item">
-                                <p class="text-main">Сообщайте о&nbsp;доступности.</p>
+                                <p class="text-main">Выделяйте товарные группы.</p>
                             </li>
                             <li data-animate="fade-up" data-delay="150" class="notes-mobile-item">
-                                <p class="text-main">Добавляйте видеообзоры и&nbsp;повышайте&nbsp;тем&nbsp;самым&nbsp;конверсию.</p>
-                            </li>
-                            <li data-animate="fade-up" data-delay="200" class="notes-mobile-item">
-                                <p class="text-main">Используйте торговые предложения для&nbsp;вариативных&nbsp;товаров.</p>
-                            </li>
-                            <li data-animate="fade-up" data-delay="250" class="notes-mobile-item">
-                                <p class="text-main">Выводите важные характеристики на&nbsp;первый&nbsp;экран&nbsp;просмотра.</p>
-                            </li>
-                            <li data-animate="fade-up" data-delay="300" class="notes-mobile-item">
-                                <p class="text-main">Оформляйте заказы за&nbsp;клиентов с&nbsp;функцией «Купить&nbsp;в&nbsp;1&nbsp;клик».</p>
+                                <p class="text-main">Оформляйте заказы за клиента с&nbsp;функцией «Купить&nbsp;в&nbsp;1&nbsp;клик».</p>
                             </li>
                         </ul>
                     </article>
                 </section>
+
                 <section class="section">
                     <article class="modes">
                         <p data-animate="fade-from-left" class="subtitle">На все случаи жизни</p>
