--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 </span>
                                 <p class="hero__advantage-title text-title" data-animate="fade-up" data-delay="100"><strong>Удобен при любом объёме&nbsp;каталога</strong></p>
                                 <p class="text-main" data-animate="fade-up" data-delay="150">
-                                    Решение спроектировано так, чтобы магазин оставался аккуратным, удобным и&nbsp;понятным —&nbsp;будь&nbsp;в&nbsp;нём 30 или 2&nbsp;000 товаров.
+                                    Решение спроектировано так, чтобы магазин&nbsp;оставался аккуратным, удобным и&nbsp;понятным —&nbsp;будь&nbsp;в&nbsp;нём 30 или 2&nbsp;000 товаров.
                                 </p>
                             </div>
                             <div class="hero__advantage block">
@@ -279,7 +279,7 @@
                                         </defs>
                                     </svg>
                                 </span>
-                                <p class="hero__advantage-title text-title" data-animate="fade-up" data-delay="100"><strong>Быстрый запуск без&nbsp;головной боли</strong></p>
+                                <p class="hero__advantage-title text-title" data-animate="fade-up" data-delay="100"><strong>Быстрый запуск без головной&nbsp;боли</strong></p>
                                 <p class="text-main" data-animate="fade-up" data-delay="150">
                                     Простые настройки, удобный интерфейс и&nbsp;продуманная структура – позволяют запустить интернет-магазин гораздо быстрее, чем при&nbsp;использовании универсальных
                                     решений.
@@ -427,7 +427,7 @@
                         </h2>
                         <div class="panel__desc">
                             <p data-animate="fade-up" data-delay="100" class="text-main">
-                                Вы не хотите перемещаться по запутанной административной&nbsp;панели и тратить часы на изучение документации, чтобы управлять своим магазином?
+                                Вы не хотите перемещаться по запутанной административной&nbsp;панели и тратить часы на&nbsp;изучение документации, чтобы управлять своим магазином?
                             </p>
                             <p data-animate="fade-up" data-delay="150" class="text-main">
                                 Поприветствуйте нашу интуитивно понятную панель&nbsp;настроек&nbsp;«КРАЙТ», которая упрощает запуск&nbsp;и&nbsp;управление&nbsp;вашим интернет-магазином.
@@ -442,7 +442,7 @@
                                 </div>
                                 <div class="panel__content-left-text" data-animate="fade-up" data-delay="100">
                                     <p class="text-title">Полный контроль</p>
-                                    <p class="text-main" data-animate="fade-up" data-delay="150">Ключевые настройки в одном удобном месте</p>
+                                    <p class="text-main" data-animate="fade-up" data-delay="150">Ключевые настройки в одном удобном&nbsp;месте</p>
                                 </div>
                                 <div class="panel__content-left-text" data-animate="fade-up" data-delay="100">
                                     <p class="text-title">Интуитивный интерфейс</p>
@@ -474,9 +474,9 @@
                         </div>
 
                         <div class="styles__content block">
-                            <div class="styles__content-image">
+                            <figure class="styles__content-image">
                                 <img src="./assets/images/news/styles-1.png" alt="Styles" />
-                            </div>
+                            </figure>
                             <div class="styles__content-image">
                                 <img src="./assets/images/news/styles-2.png" alt="Styles" />
                             </div>
@@ -556,9 +556,9 @@
                 <!-- Card -->
                 <section class="section">
                     <article class="card">
-                        <p data-animate="fade-from-left" class="subtitle">Простота – это сила</p>
+                        <p data-animate="fade-from-left" class="subtitle">Всё, что нужно</p>
                         <div class="card__head section__head">
-                            <h2 data-animate="fade-up" class="heading lv2">Карточка товара, <strong class="text-orange">котораяпродаёт</strong></h2>
+                            <h2 data-animate="fade-up" class="heading lv2">Карточка товара, <strong class="text-orange nowrap">которая продаёт</strong></h2>
                             <div data-animate="fade-up" data-delay="200" class="text-main">
                                 <p>Не просто страница, а инструмент продаж, который превращает просмотр в покупку.</p>
                             </div>
@@ -754,7 +754,7 @@
                     <article class="order">
                         <div class="section__head section__head--column">
                             <h3 data-animate="fade-up" class="heading lv3">Оформление заказа</h3>
-                            <p data-animate="fade-up" data-delay="200" class="text-main">Настройте оформление заказа под бизнес-сценарии вашей компании.</p>
+                            <p data-animate="fade-up" data-delay="200" class="text-main">Настройте оформление заказа <span class="nowrap-mobile">под бизнес-сценарии</span> вашей компании.</p>
                         </div>
                         <div class="order__wrapper">
                             <div class="block section__content-block">
@@ -807,16 +807,16 @@
                                 </p>
                             </li>
                             <li data-animate="fade-up" data-delay="50" class="notes-mobile-item">
-                                <p class="text-main">Импортируйте базу местоположений для всего мира</p>
+                                <p class="text-main">Импортируйте базу местоположений для&nbsp;всего мира</p>
                             </li>
                             <li data-animate="fade-up" data-delay="100" class="notes-mobile-item">
                                 <p class="text-main">Предложите покупателям различные способы&nbsp;доставки</p>
                             </li>
                             <li data-animate="fade-up" data-delay="150" class="notes-mobile-item">
-                                <p class="text-main">Добавьте дополнительные платные услуги для каждого способа доставки (например, экспресс-доставка, упаковка и др.)</p>
+                                <p class="text-main">Добавьте дополнительные платные услуги для каждого способа доставки (например,&nbsp;подъём на этаж, экспресс-доставка, упаковка и др.)</p>
                             </li>
                             <li data-animate="fade-up" data-delay="200" class="notes-mobile-item">
-                                <p class="text-main">Вариант «Самовывоз из магазина» позволит&nbsp;клиенту выбрать из списка или&nbsp;на карте наиболее подходящий магазин</p>
+                                <p class="text-main">Вариант «Самовывоз из магазина» позволит&nbsp;клиенту выбрать из списка или&nbsp;на&nbsp;карте наиболее подходящий магазин</p>
                             </li>
                             <li data-animate="fade-up" data-delay="250" class="notes-mobile-item">
                                 <p class="text-main">Предложите покупателям разнообразные&nbsp;варианты оплаты</p>
@@ -919,7 +919,7 @@
                                 <p class="text-main">Добавьте разнообразные способы связи: телефон, <span class="nowrap">e-mail</span>, мессенджеры</p>
                             </li>
                             <li data-animate="fade-up" data-delay="100" class="notes-mobile-item">
-                                <p class="text-main">Расскажите о ключевым особенностях и доступных&nbsp;способах оплаты</p>
+                                <p class="text-main">Расскажите о ключевым особенностях и&nbsp;доступных&nbsp;способах оплаты</p>
                             </li>
                             <li data-animate="fade-up" data-delay="150" class="notes-mobile-item">
                                 <p class="text-main">
@@ -957,23 +957,25 @@
                             <div data-animate="fade-up" data-delay="100" class="market__content-item">
                                 <p class="market__content-item-number subtitle">03</p>
                                 <h4 class="market__content-item-title heading lv4">Складской учет</h4>
-                                <p class="market__content-item-text text-main">Управление товарами на складах. Документы, поставщики, отчёты, приход товара по штрих-коду.</p>
+                                <p class="market__content-item-text text-main">
+                                    Управление товарами на складах. Документы, поставщики, отчёты, приход товара <span class="nowrap">по штрих-коду.</span>
+                                </p>
                             </div>
                             <div data-animate="fade-up" class="market__content-item">
                                 <p class="market__content-item-number subtitle">04</p>
                                 <h4 class="market__content-item-title heading lv4">Выгрузку в Яндекс.Маркет</h4>
                                 <p class="market__content-item-text text-main">
-                                    Модуль «Выгрузка в Яндекс.Маркет» помогает произвести выгрузку товаров интернет-магазина, с любой структурой и товарным ассортиментом.
+                                    Модуль «Выгрузка в Яндекс.Маркет» помогает&nbsp;произвести выгрузку товаров интернет-магазина, с любой структурой и товарным ассортиментом.
                                 </p>
                             </div>
                             <div data-animate="fade-up" data-delay="50" class="market__content-item">
                                 <p class="market__content-item-number subtitle">05</p>
                                 <h4 class="market__content-item-title heading lv4">Несколько видов цен</h4>
-                                <p class="market__content-item-text text-main">Например, оптовая, розничная, цена за эксклюзивную покупку и т.д.</p>
+                                <p class="market__content-item-text text-main">Например, оптовая, розничная, цена&nbsp;за эксклюзивную покупку и т.д.</p>
                             </div>
                             <div data-animate="fade-up" data-delay="100" class="market__content-item">
                                 <p class="market__content-item-number subtitle">06</p>
-                                <h4 class="market__content-item-title heading lv4">Накопительные скидки и программы лояльности</h4>
+                                <h4 class="market__content-item-title heading lv4">Накопительные скидки и&nbsp;программы лояльности</h4>
                                 <p class="market__content-item-text text-main">
                                     Накопительные скидки – это программа поощрения постоянных покупателей, в которой величина скидки или бонуса зависит от суммы совершённых покупок.
                                 </p>
