--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                     </video>
                                 </div>
                             </div>
-                            <h2 data-animate="fade-up" class="heading lv2">Создан специально для</h2>
+                            <h2 data-animate="fade-up" class="heading lv2">Создан специально&nbsp;для</h2>
                             <h2 data-animate="fade-up" data-delay="100" class="heading lv2 text-green">малого и среднего бизнеса</h2>
                         </div>
                         <div class="hero__advantages">
@@ -135,7 +135,7 @@
                             </div>
                             <div class="hero__advantage block">
                                 <span class="hero__advantage-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 64 64" fill="none">
                                         <path
                                             d="M56.7401 15.703C49.0739 9.80921 41.6383 14.6124 33.3445 12.9143C24.9907 11.2036 21.6625 5.50779 12.1478 8.13692C3.71932 10.4658 -1.3948 19.8032 3.23862 27.6205C4.55898 29.8482 6.80831 31.5288 7.72754 34.0213C9.21033 38.0422 6.95327 41.1292 7.39355 45.0806C9.22311 61.4989 34.2971 55.1395 43.5233 50.0313C57.9926 42.0203 67.7812 24.1915 56.7401 15.703Z"
                                             fill="url(#paint0_linear_1_486)"
@@ -204,7 +204,7 @@
                             </div>
                             <div class="hero__advantage block">
                                 <span class="hero__advantage-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 64 64" fill="none">
                                         <g clip-path="url(#clip0_1_504)">
                                             <path
                                                 d="M35.8237 0.608359C24.0299 4.07661 26.3954 12.3065 25.0762 21.4257C23.4299 32.8072 16.3144 26.9714 8.13923 33.118C-5.99252 43.7431 4.27286 67.1975 21.8227 63.6355C31.1417 61.7441 33.046 54.8736 36.8469 47.5325C41.7635 38.0359 49.9166 40.625 57.2301 34.4254C72.062 21.8526 52.5547 -4.31177 35.8237 0.608359Z"
@@ -287,7 +287,7 @@
                             </div>
                             <div class="hero__advantage block">
                                 <span class="hero__advantage-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 64 64" fill="none">
                                         <g clip-path="url(#clip0_1_523)">
                                             <path
                                                 d="M61.171 42.2269C56.7421 35.7147 47.1479 32.5734 45.4605 24.3699C44.1691 18.0914 46.1815 10.8596 42.3796 5.21831C37.8085 -1.56456 30.4221 -0.261437 25.61 5.56994C19.6809 12.7549 14.1086 2.60819 7.09939 2.60819C3.47614 2.60819 0.460141 5.37019 0.036391 8.38456C-0.167359 9.83381 0.515016 10.6886 1.32102 11.5457C10.4643 21.2697 3.82564 35.1566 8.80327 45.6283C14.5383 57.6933 27.581 45.5444 36.5849 47.1901C45.3485 48.7917 48.416 64.3262 57.7289 62.8393C65.6525 61.5741 65.1917 48.1391 61.171 42.2269Z"
@@ -374,7 +374,9 @@
                                         </defs>
                                     </svg>
                                 </span>
-                                <p class="hero__advantage-title text-title" data-animate="fade-up" data-delay="100"><strong>Создан для бизнеса, а не «для всего подряд»</strong></p>
+                                <p class="hero__advantage-title text-title" data-animate="fade-up" data-delay="100">
+                                    <strong>Создан для бизнеса, <span class="nowrap">а не «для всего подряд»</span></strong>
+                                </p>
                                 <p class="text-main" data-animate="fade-up" data-delay="150">
                                     Это не универсальный шаблон от трусов до тракторов, а продуманное отраслевое решение с учётом реальных потребностей бизнеса в e-commerce.
                                 </p>
@@ -409,12 +411,16 @@
                                     </svg>
                                 </span>
                                 <p class="compliance__left-quote-text text-main">
-                                    Без чёткого закрепления в документах, любая модификация нарушает ГК РФ, и если дело дойдёт до суда, штраф может достигать 5 млн ₽
+                                    Без&nbsp;чёткого закрепления в&nbsp;документах, любая модификация нарушает ГК РФ, и&nbsp;если дело дойдёт до&nbsp;суда, штраф может достигать 5&nbsp;млн&nbsp;₽
                                 </p>
                             </div>
                         </div>
                         <!-- Video -->
-                        <div class="compliance__right"></div>
+                        <div class="compliance__right">
+                            <figure>
+                                <img src="./assets/images/news/compliance.png" alt="compliance" />
+                            </figure>
+                        </div>
                     </article>
                 </section>
 
@@ -512,7 +518,7 @@
                                 </div>
                                 <div class="rules__feature">
                                     <div class="rules__feature-title text-title" data-animate="fade-up" data-delay="100">Адаптируйте дизайн</div>
-                                    <div class="text-main" data-animate="fade-up" data-delay="150">Меняйте внешний вид под стиль вашего бизнеса</div>
+                                    <div class="text-main" data-animate="fade-up" data-delay="150">Меняйте внешний вид <span class="nowrap">под стиль вашего бизнеса</span></div>
                                 </div>
                                 <div class="rules__feature">
                                     <div class="rules__feature-title text-title" data-animate="fade-up" data-delay="100">Легко настраивайте</div>
