fix 2 and tablet

--- a/index.html
+++ b/index.html
@@ -420,6 +420,9 @@
                             <figure>
                                 <img src="./assets/images/news/compliance.png" alt="compliance" />
                             </figure>
+                            <div class="compliance__right-play">
+                                <button class="button play"></button>
+                            </div>
                         </div>
                     </article>
                 </section>
